# automation_over_espnow

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build_bash.sh  gdbinit  sdkconfig  sdkconfig.old
components/button/: CMakeLists.txt
components/button/include/: iot_button.h
components/common/: CMakeLists.txt  Kconfig  component.mk
components/control/: CMakeLists.txt  component.mk  kconfig
components/debug/: CMakeLists.txt  Kconfig  component.mk
components/espnow/: CMakeLists.txt  Kconfig  component.mk
components/ota/: CMakeLists.txt  component.mk
components/provisioning/: CMakeLists.txt  component.mk
components/security/: CMakeLists.txt  Kconfig  component.mk
components/utils/: CMakeLists.txt
components/utils/include/: espnow_utils.h
components/vscp/: CMakeLists.txt  component.mk  vscp_helper.c
components/vscp/include/: alpha.h  beta.h  event_handler_matrix.h  vscp.h  vscp_class.h  vscp_helper.h  vscp_led.h  vscp_type.h
components/vscp/srcs/: event_handler_matrix.c  vscp_event_handler.c  vscp_helper.c  vscp_led.c
components/wifi_manager/: CMakeLists.txt  Kconfig
components/wifi_manager/include/: wifim.h
components/wifi_manager/src/: core_wifim.c  wifim.c
docs/: vscp_event_02.txt
main/: Kconfig.projbuild  alpha.c  app_main.c  beta.c  espnow_app.c  espnow_sec_interface.c  sec_interface.c
